[PT#152388534] Dashboard researcher icons spacing fixed

--- a/src/modules/Dashboard/components/_Dashboard.scss
+++ b/src/modules/Dashboard/components/_Dashboard.scss
@@ -62,6 +62,7 @@
     height: 60px !important;
     .researchIdAvatar {
       background-color: transparent !important;
+      margin-right: 3px;
       &:hover {
         cursor: pointer;
       }
