--- a/src/sass/_icons.scss
+++ b/src/sass/_icons.scss
@@ -52,8 +52,8 @@
     height: 18px;
   }
   &.dashboard {
-    margin-right: 12px;
-    width: 32px;
-    height: 32px;
+    margin-right: 6px;
+    width: 40px;
+    height: 40px;
   }
 }
